--- a/manifest.json
+++ b/manifest.json
@@ -1,63 +1,90 @@
 {
-    "name": "Hacker News Enhancement Suite",
-    "short_name": "HNES",
-    "version": "1.6.0.3",
-    "description": "Hacker News Enhanced.",
-    "manifest_version": 2,
-    "background": {
-      "scripts": ["background.js"]
+  "name": "Hacker News Enhancement Suite: Forked for V3",
+  "short_name": "HNES",
+  "version": "1.7.0.0",
+  "description": "Hacker News Enhanced with Manifest V3 support",
+  "manifest_version": 3,
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": [
+    "storage"
+  ],
+  "icons": {
+      "16": "images/icon-16.png",
+      "48": "images/icon-48.png",
+      "128": "images/icon-128.png"
+  },
+  "host_permissions": [
+    "http://news.ycombinator.com/*",
+    "https://news.ycombinator.com/*", 
+    "http://news.ycombinator.net/*",
+    "https://news.ycombinator.net/*",
+    "http://hackerne.ws/*", 
+    "https://hackerne.ws/*",
+    "http://news.ycombinator.org/*",
+    "https://news.ycombinator.org/*",
+    "http://hckrnews.com/*"
+  ],
+  "content_scripts": [
+    {
+      "run_at": "document_start",
+      "css": ["style.css"],
+      "matches": [
+        "http://news.ycombinator.com/*",
+        "https://news.ycombinator.com/*",
+        "http://news.ycombinator.net/*", 
+        "https://news.ycombinator.net/*",
+        "http://hackerne.ws/*",
+        "https://hackerne.ws/*", 
+        "http://news.ycombinator.org/*",
+        "https://news.ycombinator.org/*"
+      ]
     },
-    "permissions": [
-      "storage",
-      "unlimitedStorage"
-    ],
-    "icons": {
-        "16" : "images/icon-16.png",
-        "48" : "images/icon-48.png",
-        "128" : "images/icon-128.png"
+    {
+      "run_at": "document_end",
+      "all_frames": true,
+      "css": ["style.css"],
+      "js": [
+        "js/jquery-3.2.1.min.js",
+        "js/linkify/jquery.linkify-1.0.js",
+        "js/linkify/plugins/jquery.linkify-1.0-twitter.js",
+        "js/hn.js"
+      ],
+      "matches": [
+        "http://news.ycombinator.com/*",
+        "https://news.ycombinator.com/*",
+        "http://news.ycombinator.net/*",
+        "https://news.ycombinator.net/*", 
+        "http://hackerne.ws/*",
+        "https://hackerne.ws/*",
+        "http://news.ycombinator.org/*",
+        "https://news.ycombinator.org/*"
+      ]
     },
-    "content_scripts": [
-      { "run_at": "document_start",
-        "css": [ "style.css" ],
-        "matches": [
-          "http://news.ycombinator.com/*",
-          "https://news.ycombinator.com/*",
-          "http://news.ycombinator.net/*",
-          "https://news.ycombinator.net/*",
-          "http://hackerne.ws/*",
-          "https://hackerne.ws/*",
-          "http://news.ycombinator.org/*",
-          "https://news.ycombinator.org/*"]
-      },
-      {
-        "run_at": "document_end",
-        "all_frames": true,
-        "css": [ "style.css" ],
-        "js": [
-          "js/jquery-3.2.1.min.js",
-          "js/linkify/jquery.linkify-1.0.js",
-          "js/linkify/plugins/jquery.linkify-1.0-twitter.js",
-          "js/hn.js"],
-        "matches": [
-          "http://news.ycombinator.com/*",
-          "https://news.ycombinator.com/*",
-          "http://news.ycombinator.net/*",
-          "https://news.ycombinator.net/*",
-          "http://hackerne.ws/*",
-          "https://hackerne.ws/*",
-          "http://news.ycombinator.org/*",
-          "https://news.ycombinator.org/*"]
-      },
-      {
-        "matches": ["http://hckrnews.com/*"],
-        "run_at": "document_end",
-        "js": ["js/jquery-3.2.1.min.js", "js/hn.js"]
-      }
-    ],
-    "web_accessible_resources": [
+    {
+      "matches": ["http://hckrnews.com/*"],
+      "run_at": "document_end",
+      "js": ["js/jquery-3.2.1.min.js", "js/hn.js"]
+    }
+  ],
+  "web_accessible_resources": [{
+    "resources": [
       "images/spin.gif",
-      "images/unvote.gif",
+      "images/unvote.gif", 
       "images/tag.svg",
       "templates/comment.html"
+    ],
+    "matches": [
+      "http://news.ycombinator.com/*",
+      "https://news.ycombinator.com/*",
+      "http://news.ycombinator.net/*",
+      "https://news.ycombinator.net/*",
+      "http://hackerne.ws/*",
+      "https://hackerne.ws/*",
+      "http://news.ycombinator.org/*", 
+      "https://news.ycombinator.org/*",
+      "http://hckrnews.com/*"
     ]
+  }]
 }
